# intlify

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  _typos.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/: renovate.json
.reports/: design-contradiction-review-claud.md  design-contradiction-review-codex.md  design-contradiction-review-grok.md  desing-review-organized.md
crates/intlify_cli/: Cargo.toml
crates/intlify_cli/examples/: generate_config_schema.rs
crates/intlify_cli/src/: args.rs  command.rs  config.rs  error.rs  fmt.rs  input.rs  lib.rs  main.rs  output.rs  resource.rs  schema.rs  version.rs
crates/intlify_cli/tests/: cli.rs  config.rs  fmt.rs  schema.rs
crates/intlify_cli/tests/common/: mod.rs
crates/intlify_format/: Cargo.toml
crates/intlify_format/fixtures/complex-spacing/: input.mf2  options.json  preserve.mf2
crates/intlify_format/fixtures/invalid-input-declaration/: diagnostics.json  options.json
crates/intlify_format/fixtures/markup-spacing/: input.mf2  standard.mf2
crates/intlify_format/fixtures/matcher-ragged-rows/: input.mf2  standard.mf2
crates/intlify_format/fixtures/matcher-table/: input.mf2  standard.mf2
crates/intlify_format/fixtures/preserve-blank-lines/: input.mf2  preserve.mf2  standard.mf2
crates/intlify_format/fixtures/preserve-single-line/: input.mf2  preserve.mf2  standard.mf2
crates/intlify_format/src/: api.rs  document.rs  error.rs  format.rs  layout.rs  lib.rs  options.rs  parsed.rs  render.rs  result.rs
crates/intlify_format/tests/: api.rs  fixtures.rs
crates/intlify_format_napi/: Cargo.toml
crates/intlify_format_napi/src/: lib.rs  options.rs  result.rs
crates/intlify_format_wasm/: Cargo.toml
crates/intlify_format_wasm/src/: lib.rs  options.rs  result.rs
crates/intlify_resource/: Cargo.toml
crates/intlify_resource/src/: adapter.rs  artifact.rs  config.rs  error.rs  glob.rs  identity.rs  lib.rs  limits.rs  offset_map.rs  registry.rs  span.rs
crates/intlify_resource/src/adapter/json/: frontend.rs  mod.rs  string.rs
crates/ox_mf2_napi/: Cargo.toml  build.rs
crates/ox_mf2_napi/src/: diagnostics.rs  error.rs  handles.rs  input.rs  lib.rs  options.rs  snapshot.rs  source_text.rs
crates/ox_mf2_parser/: Cargo.toml  LICENSE  PERFORMANCE.md  README.md
crates/ox_mf2_parser/benches/: README.md  hyperfine.sh
crates/ox_mf2_parser/fixtures/: CONFORMANCE.md  README.md
crates/ox_mf2_parser/fixtures/recovery/: input_declaration_not_variable_expression.mf2  input_declaration_not_variable_expression.snap  matcher_without_selectors.snap  matcher_without_variants.mf2  matcher_without_variants.snap  missing_s_before_attribute.mf2  missing_s_before_attribute.snap  missing_s_before_function.mf2  missing_s_before_function.snap  missing_s_before_local_variable.mf2  missing_s_before_local_variable.snap  missing_s_before_selector.mf2  missing_s_before_selector.snap  missing_s_between_variant_keys.mf2  missing_s_between_variant_keys.snap  trailing_colon_in_attribute_identifier.mf2  trailing_colon_in_attribute_identifier.snap  trailing_colon_in_function_identifier.mf2  trailing_colon_in_function_identifier.snap  trailing_colon_in_markup_identifier.mf2  trailing_colon_in_markup_identifier.snap  trailing_colon_in_option_identifier.mf2  trailing_colon_in_option_identifier.snap  unclosed_placeholder.mf2  unclosed_placeholder.snap  unclosed_quoted_pattern.mf2  unclosed_quoted_pattern.snap
crates/ox_mf2_parser/fixtures/snapshot/valid/: 01_hello.txt  02_with_trivia.mf2  02_with_trivia.txt  03_placeholder.txt  04_declaration.mf2  04_declaration.txt  05_recoverable.mf2  05_recoverable.txt
crates/ox_mf2_parser/fixtures/spec/: complex_quoted_pattern.mf2  complex_quoted_pattern.snap  empty_simple_message.snap  local_declaration.mf2  local_declaration.snap  matcher_with_catch_all.mf2  matcher_with_catch_all.snap  matcher_with_fractional_key.mf2  matcher_with_fractional_key.snap  matcher_with_numeric_keys.mf2  matcher_with_numeric_keys.snap  simple_message_text_only.snap  simple_message_with_variable.snap
crates/ox_mf2_parser/fixtures/spec/message-format-wg/: README.md
crates/ox_mf2_parser/fixtures/spec/message-format-wg/tests/: bidi.json  pattern-selection.json  syntax-errors.json  syntax.json  u-options.json
crates/ox_mf2_parser/fixtures/spec/message-format-wg/tests/functions/: string.json
crates/ox_mf2_parser/src/: api.rs  diagnostic.rs  lib.rs  parser.rs  scanner.rs  scanner.rs.bak  semantic.rs  source.rs  span.rs  syntax_kind.rs  tables.rs  view.rs  workspace.rs
crates/ox_mf2_parser/src/error/: binding.rs  mod.rs  parse.rs  source_text.rs
crates/ox_mf2_parser/src/snapshot/: decoder.rs  error.rs  format.rs  mod.rs  sections.rs  source_map.rs  string_table.rs  view.rs  writer.rs
crates/ox_mf2_parser/tests/: api_smoke.rs  batch_parse.rs  error_codes.rs  fixtures.rs  parser_grammar.rs  parser_recovery.rs  performance_guards.rs  semantic_lowering.rs  snapshot_compat.rs  snapshot_fixtures.rs  snapshot_invalid.rs  snapshot_round_trip.rs  wg_conformance.rs
crates/ox_mf2_wasm/: Cargo.toml
crates/ox_mf2_wasm/src/: diagnostics.rs  error.rs  handles.rs  input.rs  lib.rs  options.rs  source_text.rs
design/: 001-ox-mf2-toolchain-foundation.md  002-ox-mf2-phase-1-rust-parser-design.md  003-ox-mf2-binary-ast-format-changelog.md  003-ox-mf2-phase-2-binary-ast-bindings-design.md  003-ox-mf2-phase-2-binary-ast-snapshot-design.md  004-ox-mf2-parse-artifact-cache.md  004-ox-mf2-phase-2-language-bindings-design.md  005-ox-mf2-phase-3-tooling-transport-design.md  006-ox-mf2-phase-3a-tooling-foundation-design.md  007-ox-mf2-phase-3b-formatter-design.md  008-ox-mf2-phase-3c-linter-design.md  009-ox-mf2-phase-3d-lsp-editor-design.md  010-ox-mf2-phase-3e-agent-integration-design.md  011-ox-mf2-formatter-ir-design.md  012-ox-mf2-parser-semantic-validation-design.md  014-ox-mf2-message-linker-design.md  (+8 more)
tools/mf-parser-bench/rs/: Cargo.toml
tools/mf-parser-bench/rs/src/: main.rs
tools/resource-bench/rs/: Cargo.toml
tools/resource-bench/rs/src/: main.rs
(+98 files in other folders)
