[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["refers/*", "tools/mf-parser-bench/rs"]

[workspace.package]
edition = "2021"
rust-version = "1.85.0"
license = "MIT"
repository = "https://github.com/intlify/intlify"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
