[workspace]
resolver = "2"
members = ["crates/*"]
# Excluding refers/* keeps git-submodule workspaces out of our workspace
# member list. Excluding tools/mf-parser-bench/rs keeps the benchmark CLI
# standalone (it also declares its own `[workspace]` so cargo unambiguously
# resolves path deps against its own workspace).
exclude = ["refers/*", "tools/mf-parser-bench/rs", "tools/resource-bench/rs"]

[workspace.package]
edition = "2021"
rust-version = "1.85.0"
license = "MIT"
repository = "https://github.com/intlify/intlify"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"

[profile.release]
opt-level = 3
# Full (fat) LTO — slower to link but lets the inliner cross every
# crate boundary in the workspace, including the parser <-> scanner
# split. Measured against the bench harness, full LTO consistently
# beats thin on the parser hot path.
lto = "fat"
codegen-units = 1
