[package]
name = "intlify_cli"
version = "0.14.0-alpha.7"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "intlify"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
glob = "0.3"
intlify_format = { path = "../intlify_format" }
ox_mf2_parser = { path = "../ox_mf2_parser" }
schemars = { version = "0.9", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
