[package]
name = "intlify_cli"
version = "0.14.0-alpha.11"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "intlify"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
file-id = "0.2"
glob = "0.3"
intlify_format = { path = "../intlify_format" }
intlify_resource = { path = "../intlify_resource" }
ox_mf2_parser = { path = "../ox_mf2_parser" }
schemars = { version = "1.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
