[package]
name = "intlify_format"
version = "0.14.0-alpha.8"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ox_mf2_parser = { path = "../ox_mf2_parser" }
unicode-width = "0.2"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
