[package]
name = "intlify_format_wasm"
version = "0.14.0-alpha.8"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
intlify_format = { path = "../intlify_format" }
ox_mf2_parser = { path = "../ox_mf2_parser" }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2.125"

# `wasm-bindgen` expands host boundary glue that can contain unsafe internally.
# The formatter core keeps the workspace `unsafe_code = forbid` policy.
[lints.rust]
unsafe_code = "allow"
