[package]
name = "intlify_resource"
version = "0.14.0-alpha.9"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
benchmark = []

[lints]
workspace = true

[dependencies]
schemars = { version = "1.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
allocation-counter = "0.8.1"
