[package]
name = "ox_mf2_parser"
version = "0.14.0-alpha.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "High Performance MessageFormat 2 parser core with CST, diagnostics, recovery, semantic lowering, and binary snapshot support."
readme = "README.md"
documentation = "https://docs.rs/ox_mf2_parser"
keywords = ["intlify", "messageformat", "mf2", "parser", "i18n"]
categories = ["parser-implementations", "internationalization"]
include = [
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "src/*.rs",
  "src/error/**/*.rs",
  "src/snapshot/**/*.rs",
  "tests/**/*.rs",
  "fixtures/**/*.mf2",
  "fixtures/**/*.meta",
  "fixtures/**/*.snap",
  "fixtures/**/*.bin",
  "fixtures/**/*.txt",
  "fixtures/**/*.md"
]

[lints]
workspace = true

[features]
default = []
# Reserved for Phase 1 follow-up:
# rayon = ["dep:rayon"]

[dependencies]
# SIMD-accelerated byte search for the scanner's text/quoted-text fast paths.
# Used to jump to the next delimiter without per-byte iteration.
memchr = "2.7"

[dev-dependencies]
serde_json = "1"
