[package]
name = "mf-parser-bench-rs"
version = "0.0.0"
edition = "2021"
publish = false

# Keep this tool standalone — path deps into refers/* carry their own
# workspace roots and must not be reparented to the repo-root workspace.
[workspace]

[dependencies]
mf2_parser = { path = "../../../refers/mf2-tools/parser" }
ox_content_i18n = { path = "../../../refers/ox-content/crates/ox_content_i18n" }
ox_mf2_parser = { path = "../../../crates/ox_mf2_parser" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
