[package]
name = "mf-parser-bench-rs"
version = "0.0.0"
edition = "2021"
publish = false

# Keep this tool standalone — path deps into refers/* carry their own
# workspace roots and must not be reparented to the repo-root workspace.
[workspace]

[features]
default = []
bench-alloc = ["dep:stats_alloc"]

[[bin]]
name = "mf-parser-bench-rs"
path = "src/main.rs"

[[bin]]
name = "ox-mf2-bench"
path = "src/bin/ox_mf2_bench.rs"

[dependencies]
mf2_parser = { path = "../../../refers/mf2-tools/parser" }
ox_content_i18n = { path = "../../../refers/ox-content/crates/ox_content_i18n" }
ox_mf2_parser = { path = "../../../crates/ox_mf2_parser" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stats_alloc = { version = "0.1", optional = true }

[profile.release]
opt-level = 3
# Full LTO across the bench harness AND every benched parser crate so
# the inliner can cross the harness <-> parser-under-test boundary;
# every parser target gets the same treatment for a fair comparison.
lto = "fat"
codegen-units = 1
